refs #36 Fix CSS for better behaviour when text of checkboxes wrap.

--- a/creme/creme_core/static/icecream/creme_core/css/creme-ui.css
+++ b/creme/creme_core/static/icecream/creme_core/css/creme-ui.css
@@ -402,6 +402,11 @@ span.ui-creme-datepicker-trigger {
 }
 
 .checklist-content .checkbox-field {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+
     margin-right: 20px;
 
     padding-top:2px;
